OF-3169: Refactor PubSub caching persistence to fix item-state concurrency and flush correctness
* Introduce a clear synchronization contract for published item state using a single lock (`itemsPending`)
* Replace mixed concurrent collections with explicitly guarded data structures
* Ensure consistent, atomic mutation of `itemsPending`, `itemsToAdd`, and `itemsToDelete`
* Improve maintainability by clarifying locking ownership and invariants

This change improves correctness and predictability of published-item persistence under concurrent load without altering node operation ordering semantics.